# devyard

./: .gitignore  .pre-commit-config.yaml  .pylintrc  RANCHER.md  README.md  debug.py  install.sh  loki.yaml  pyproject.toml  rbac.yaml  settings.json  start-grafana.sh
app/: Dockerfile  main.py
charts/service/: Chart.yaml  values.yaml
charts/service/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml
k8s/: client-deployment.yaml  delivery-deployment.yaml
